<resources>
    <string name="app_name">The Movie MVVM</string>
    <string name="action_settings">Settings</string>
    <string name="name_movie">Movie Title</string>
    <string name="original_title">Original Title</string>
    <string name="original_language">Original Language</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="overview">Overview</string>
    <string name="rating">Popularity</string>
    <string name="release">Release Date</string>
    <string name="pref_sort_order_label">Sort Order</string>
    <string name="pref_sort_order_key">sortOrder</string>
    <string name="pref_most_popular">Most Popular</string>
    <string name="pref_highest_rated">Highest Rated</string>
    <string name="preview_page">Preview Page</string>
    <string name="next_page">Next Page</string>
    <string name="action_favorite">My Favorites movies</string>
    <string name="action_most_popular">Most popular movies</string>
    <string name="budget">Budget</string>
    <string name="home_page">Home Page</string>
    <string name="trailler">See Trailler</string>
    <string name="teaser">See Teaser</string>
    <string name="popularity">Popularity:</string>
    <string name="vote_count">Vote Count:</string>
    <string name="rate">Rate:</string>
    <string name="get_top_rate">Get the top rate</string>
    <string name="order_by_popularity">Order by popularity</string>
    <string name="order_by_high_vote">Order by high vote</string>
    <string name="order_by_rate">Order by rate</string>
    <string name="top_rate">Top Rate</string>
</resources>