<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="100"
        android:title="@string/action_favorite"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_top_rate"
        android:orderInCategory="100"
        android:title="@string/top_rate"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_popularity"
        android:orderInCategory="100"
        android:title="@string/order_by_popularity"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_rate"
        android:orderInCategory="100"
        android:title="@string/order_by_rate"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_votes"
        android:orderInCategory="100"
        android:title="@string/order_by_high_vote"
        app:showAsAction="never"/>

</menu>