<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="3dp"
        app:cardCornerRadius="6dp"
        android:layout_margin="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:scaleType="fitXY"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thumbnail"
                android:textStyle="bold"
                android:textSize="20sp"
                tools:text="Title"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lbPopulatiry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/purple_500"
                android:text="@string/popularity"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/populatiry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/lbPopulatiry"
                app:layout_constraintTop_toBottomOf="@id/title"
                android:textSize="18sp"
                android:textColor="@color/purple_500"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                tools:text="rate"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lbVoteCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbPopulatiry"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/purple_500"
                android:text="@string/vote_count"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/voteCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/lbVoteCount"
                app:layout_constraintTop_toBottomOf="@id/lbPopulatiry"
                android:textSize="18sp"
                android:textColor="@color/purple_500"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                tools:text="rate"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lbRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/voteCount"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/purple_500"
                android:text="@string/rate"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/lbRating"
                app:layout_constraintTop_toBottomOf="@id/voteCount"
                android:textSize="18sp"
                android:textColor="@color/purple_500"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                tools:text="rate"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>